fix(global.css): scrollbar-x-bug & feat(default.vue): fix footer by calc height of main

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,5 +1,5 @@
 html {
-  @apply h-full overflow-scroll;
+  @apply h-full;
 }
 
 body {
